Fix horizontal overflow

--- a/web/static/custom.css
+++ b/web/static/custom.css
@@ -12,4 +12,5 @@
 .fill {
     min-height: 100vh;
     height: 100%;
+    overflow-x: hidden;
 }
